# HSE-ML-Ops2

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  data.dvc  docker-compose.yml  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: fashion_mnist.yaml
configs/logging/: mlflow.yaml
configs/model/: baseline.yaml  cnn.yaml
configs/training/: default.yaml
fashion_mnist_classifier/data/: dataset.py  download.py
fashion_mnist_classifier/models/: cnn.py
fashion_mnist_classifier/training/: train.py
models/: baseline.py  cnn.py
training/: train.py
utils/: helpers.py
